--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-spinner": "^7.0.0",
     "rxjs": "6.0.0",
     "rxjs-compat": "^6.3.3",
+    "sweetalert2": "^8.5.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
