--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng-simple-slideshow": "^1.2.9",
     "ng6-md-auth": "0.0.13",
     "ngx-spinner": "^7.0.0",
     "rxjs": "6.0.0",
