--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ngx-spinner": "^7.0.0",
     "rxjs": "6.0.0",
     "rxjs-compat": "^6.3.3",
+    "socket.io-client": "^2.2.0",
     "sweetalert2": "^8.5.0",
     "zone.js": "~0.8.26"
   },
@@ -44,6 +45,7 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/socket.io-client": "^1.4.32",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
