--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "hammerjs": "^2.0.8",
     "ng-simple-slideshow": "^1.2.9",
     "ng6-md-auth": "0.0.15",
-    "ngx-spinner": "^7.0.0",
+    "ngx-spinner": "7.0.0",
     "rxjs": "6.0.0",
     "rxjs-compat": "^6.3.3",
     "socket.io-client": "^2.2.0",
