--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rxjs-compat": "^6.3.3",
     "socket.io-client": "^2.2.0",
     "sweetalert2": "^8.5.0",
+    "xlsx": "^0.14.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
