--- a/nginx-custom.conf
+++ b/nginx-custom.conf
@@ -1,11 +1,38 @@
 server {
-  listen 80;
-  
-  location / {
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-    try_files $uri $uri/ /index.html =404;
-  }
-
+    listen 80;
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html = 404;
+    }
+    location /api/auth {
+        proxy_pass http://18.140.68.176:3001/api/auth;
+    }
+    location /api/me {
+        proxy_pass http://18.140.68.176:3001/api/me;
+    }
+    location /api/users {
+        proxy_pass http://18.140.68.176:3001/api/users;
+    }
+    location /api/teams {
+        proxy_pass http://18.140.68.176:3002/api/teams;
+    }
+    location /api/products {
+        proxy_pass http://18.140.68.176:3003/api/products;
+    }
+    location /api/orders {
+        proxy_pass http://18.140.68.176:3004/api/orders;
+    }
+    location /api/order {
+        proxy_pass http://18.140.68.176:3004/api/order;
+    }
+    location /api/customers {
+        proxy_pass http://18.140.68.176:3005/api/customers;
+    }
+    location /api/monitors {
+        proxy_pass http://18.140.68.176:3006/api/monitors;
+    }
+    location /api/monitor {
+        proxy_pass http://18.140.68.176:3006/api/monitor;
+    }
 }
-
